--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,6 +4,7 @@ $body-bg: #f8fafc;
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
+$font-size-middle: 1.4rem;
 $line-height-base: 1.6;
 
 // Colors
