--- a/resources/sass/modules/_setting-style.scss
+++ b/resources/sass/modules/_setting-style.scss
@@ -239,3 +239,10 @@
 .semester-edit-inner{
 	margin-bottom: 2vh;
 }
+.setting-form-text{
+	color: $text-color;
+	margin-bottom: .1vh;
+}
+.semester-edit-block{
+	margin-bottom: 1vh;
+}
