セメスターの追加及び切り替え機能を実装。授業追加に関するバグ（semeste_id not null）を修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15621,6 +15621,7 @@ a:hover {
   border-bottom: solid 2px #707070;
   margin-bottom: 2vh;
   position: relative;
+  font-size: 1.5rem;
 }
 
 .course-detail-body-info-item {
@@ -16146,6 +16147,17 @@ a:hover {
 
 .semester-edit-block {
   margin-bottom: 1vh;
+}
+
+.semester-add-block {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.semester-add-button {
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 4px #828282;
 }
 
 .calendar {
