--- a/resources/sass/modules/_setting-style.scss
+++ b/resources/sass/modules/_setting-style.scss
@@ -246,3 +246,12 @@
 .semester-edit-block{
 	margin-bottom: 1vh;
 }
+.semester-add-block{
+	text-align: center;
+	margin-top: 1rem;
+}
+.semester-add-button{
+	background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 4px #828282;
+}
