--- a/resources/sass/modules/_course.scss
+++ b/resources/sass/modules/_course.scss
@@ -94,6 +94,7 @@
 				border-bottom: solid 2px $border-color;
 				margin-bottom: 2vh;
 				position: relative;
+				font-size: 1.5rem;
 			}
 			&-info-item{
 				display: flex;
