--- a/resources/sass/settings/_normalize.scss
+++ b/resources/sass/settings/_normalize.scss
@@ -5,6 +5,14 @@ ul{
     list-style: none;
     padding: 0;
 }
+button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
 a{
     color: #2b2b2b;
     text-decoration: none;
@@ -29,4 +37,7 @@ a:hover{
 }
 .justify-content-space-around{
     justify-content: space-around!important;
+}
+.normal-text{
+    font-size: $font-size-base;
 }
